<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_bg" >

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rg_menu"
        android:layout_below="@id/line"
        android:orientation="vertical" >
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rg_menu"
        android:background="@drawable/top_line"
        android:contentDescription="@string/app_name" />

    <RadioGroup
        android:id="@+id/rg_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bg"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_weight="1.0"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:checked="false"
            android:drawablePadding="-15dp"
            android:drawableTop="@drawable/my_preordain_selector"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dividing_line" />

        <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_weight="1.0"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:checked="false"
            android:drawablePadding="-15dp"
            android:drawableTop="@drawable/quick_preordain_selector"
            android:gravity="center"
            android:text="@string/quick_preordain"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dividing_line" />

        <RadioButton
            android:id="@+id/rb_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_weight="1.0"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:checked="false"
            android:drawablePadding="-15dp"
            android:drawableTop="@drawable/other_preordain_selector"
            android:gravity="center"
            android:text="@string/other_preordain"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dividing_line" />

        <RadioButton
            android:id="@+id/rb_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_weight="1.0"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:checked="false"
            android:drawablePadding="-15dp"
            android:drawableTop="@drawable/more_selector"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RadioGroup>

</RelativeLayout>