<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/save_ip_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/web_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/server_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="12dp" >

            <ImageView
                android:id="@+id/web_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/web_normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/web_lable_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_lable_text"
                    android:textColor="@color/gray_font" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/web_head_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web_head_text"
                        android:textColor="@color/gray_font" />

                    <EditText
                        android:id="@+id/et_server_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_bg_selector"
                        android:gravity="center"
                        android:inputType="textVisiblePassword"
                        android:maxLength="15"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/web_end_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web_end_text"
                        android:textColor="@color/gray_font" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ip_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/server_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="12dp" >

            <ImageView
                android:id="@+id/ip_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ip_normal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/ip_lable_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip_lable_text"
                    android:textColor="@color/gray_font" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dip"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/et_server_ip"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:background="@drawable/edit_bg_selector"
                        android:gravity="center"
                        android:inputType="textEmailAddress"
                        android:maxLength="15"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/ip_maohao_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_maohao_text"
                        android:textColor="@color/gray_font"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_server_port"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg_selector"
                        android:gravity="center"
                        android:hint="80"
                        android:inputType="number"
                        android:maxLength="5"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/green_btn_selector"
            android:text="@string/btn_save"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>