<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/context_bg"
                android:orientation="vertical"
                android:padding="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_venues"
                            android:textColor="@color/gray_font"
                            android:textSize="16sp" />

                        <com.client.lrms.view.CustomSpinner
                            android:id="@+id/sp_venues"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/dashed" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/preordain_time"
                            android:textColor="@color/gray_font"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <com.client.lrms.view.CustomGridView
                        android:id="@+id/gv_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dip"
                        android:layout_marginTop="15dip"
                        android:gravity="center_vertical"
                        android:listSelector="@color/transparent"
                        android:numColumns="2"
                        android:scrollbars="none"
                        android:stretchMode="columnWidth"
                        android:verticalSpacing="20dip" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/lable_bg"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick_preordain"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_qucik_sumbit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:background="@drawable/blue_btn_selector"
            android:text="@string/submit"
            android:textColor="@color/btn_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>